--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ analytics:
 author:
   name             : "Jungyoon, Choi"
   avatar           : "/assets/images/bio-photo.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "데이터 사이언스를 전공합니다. 교육의 혁신에 관심이 있습니다."
+  bio              : "데이터 사이언스를 공부합니다."
   location         : "Seoul, South Korea"
   email            : "sailyourlife91@gmail.com"
   links:
@@ -294,4 +294,4 @@ defaults:
       layout: single
       author_profile: true
 
-github: [metadata] 
+github: [metadata]
