--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ analytics:
 author:
   name             : "Jungyoon, Choi"
   avatar           : "/assets/images/bio-photo.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "데이터 사이언스를 공부합니다."
+  bio              : ""
   location         : "Seoul, South Korea"
   email            : "sailyourlife91@gmail.com"
   links:
