--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ analytics:
 author:
   name             : "Jungyoon, Choi"
   avatar           : "/assets/images/bio-photo.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I'm studying machine learning and natural language processing. Let's study and grow togther."
+  bio              : "I'm studying machine learning and natural language processing."
   location         : "Seoul, South Korea"
   email            : "sailyourlife91@gmail.com"
   links:
