--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ analytics:
 author:
   name             : "Jungyoon, Choi"
   avatar           : "/assets/images/bio-photo.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "f you hear a voice within you say ‘you cannot paint,’ then by all means paint, and that voice will be silenced."
+  bio              : "If you hear a voice within you say ‘you cannot paint,’ then by all means paint, and that voice will be silenced."
   location         : "Seoul, South Korea"
   email            : "sailyourlife91@gmail.com"
   links:
